--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       font-size: 14px;
     }
   </style>
-  <script src="../libs/Three/node_modules/three/build/three.js"></script>
-  <script src="../libs/Three/node_modules/three/examples/js/controls/OrbitControls.js"></script>
-  <script src="../libs/Three/node_modules/three/examples/js/renderers/CSS2DRenderer.js"></script>
+  <script src="./libs/Three/node_modules/three/build/three.js"></script>
+  <script src="./libs/Three/node_modules/three/examples/js/controls/OrbitControls.js"></script>
+  <script src="./libs/Three/node_modules/three/examples/js/renderers/CSS2DRenderer.js"></script>
 </head>
 
 <body>
